Fixed template logo url

--- a/internal/mailer/email_template.tmpl
+++ b/internal/mailer/email_template.tmpl
@@ -87,7 +87,7 @@ Hi, {{.Recipient}}
                     font-size: 24px;
                     font-weight: bold;
                   ">
-                            <a href="https://sefglobal.org/assets/img/brand/logo.png" width="165" style="
+                            <img src="https://sefglobal.org/assets/img/brand/logo.png" width="165" style="
                         width: 80%;
                         max-width: 165px;
                         height: auto;
