Added Local running URL for template && env var for mailer

--- a/internal/mailer/email_template.tmpl
+++ b/internal/mailer/email_template.tmpl
@@ -128,7 +128,7 @@ Hi, {{.Recipient}}
                                     Sustainable Education Foundation.
                                 </p>
                                 <p style="margin: 0" th:if="${showButton}">
-                                    <a href="https://64.227.135.79/api/v1/redirect?id={{.EmailId}}" style="
+                                    <a href="{{.URL}}/api/v1/redirect?id={{.EmailId}}" style="
                           background: #1890ff;
                           text-decoration: none;
                           padding: 10px 25px;
